add animations and fix bugs

--- a/src/module/application/_application.html
+++ b/src/module/application/_application.html
@@ -1,6 +1,7 @@
-<section class="application section">
+<section class="application section" id="application">
     <div class="container">
-        <div class="application__inner">
+        <div class="application__inner"
+            style="background-image: image-set(url('../../images/application/get_app@1x.webp') type('image/webp') 1x, url('../../images/application/get_app@2x.webp') type('image/webp') 2x);">
 
             <div class="application__box">
 
@@ -32,10 +33,6 @@
                 </ul>
 
             </div>
-
-            <img class="application__img" src="../../images/application/get_app@1x.webp"
-                alt="В руці телефон на фоні смачний салат" srcset="../../images/application/get_app@2x.webp 2000w"
-                width="570" height="380">
 
         </div>
     </div>
