--- a/src/module/footer/_footer.html
+++ b/src/module/footer/_footer.html
@@ -1,154 +1,169 @@
-        <footer class="footer">
-            <div class="container">
+<footer class="footer" id="footer">
+    <div class="container">
 
-                <div class="footer__inner">
+        <div class="footer__inner">
 
-                    <div class="footer__box">
+            <div class="footer__box">
 
-                        <a class="logo footer__logo" href="#">
-                            <img class="logo__img" src="./images/logo.svg" alt="Логотип компанії" width="200"
-                                height="39">
-                        </a>
+                <a class="logo footer__logo" href="#">
+                    <img class="logo__img" src="./images/logo.svg" alt="Логотип компанії" width="200" height="39">
+                </a>
 
-                        <form class="form" action="#">
+                <form class="form" action="#">
 
-                            <label class="form__label" for="email">
-                                <input class="form__input" type="email" name="email" id="email" placeholder="Ваш email"
-                                    required>
-                                <span class="sr-only">Впишіть ваш імейл</span>
-                            </label>
+                    <label class="form__label" for="email">
+                        <input class="form__input" type="email" name="email" id="email" placeholder="Ваш email"
+                            required>
+                        <span class="sr-only">Впишіть ваш імейл</span>
+                    </label>
 
-                            <button class="btn form__btn" type="submit">
-                                <span class="icon-mask form__btn--icon-telegram"></span>
-                                Підписатися
-                            </button>
+                    <button class="btn form__btn" type="submit">
+                        <span class="icon-mask form__icon--telegram"></span>
+                        Підписатися
+                    </button>
 
-                        </form>
-
-                    </div>
-
-                    <ul class="footer__list">
-                        <li class="footer__item">
-                            <a class="link footer__link" href="#">
-                                Як це працює
-                            </a>
-                        </li>
-                        <li class="footer__item">
-                            <a class="link footer__link" href="#">
-                                Про нас
-                            </a>
-                        </li>
-                        <li class="footer__item">
-                            <a class="link footer__link" href="#">
-                                Застосунок
-                            </a>
-                        </li>
-                        <li class="footer__item">
-                            <a class="link footer__link" href="#">
-                                Продукти
-                            </a>
-                        </li>
-                        <li class="footer__item">
-                            <a class="link footer__link" href="#">
-                                Новини
-                            </a>
-                        </li>
-                        <li class="footer__item">
-                            <a class="link footer__link" href="#">
-                                Блог
-                            </a>
-                        </li>
-                        <li class="footer__item">
-                            <a class="link footer__link" href="#">
-                                Страви
-                            </a>
-                        </li>
-                        <li class="footer__item">
-                            <a class="link footer__link" href="#">
-                                Партнери
-                            </a>
-                        </li>
-                        <li class="footer__item">
-                            <a class="link footer__link" href="#">
-                                Що нового?
-                            </a>
-                        </li>
-                        <li class="footer__item">
-                            <a class="link footer__link" href="#">
-                                Меню
-                            </a>
-                        </li>
-                        <li class="footer__item">
-                            <a class="link footer__link" href="#">
-                                ЧаПи
-                            </a>
-                        </li>
-                        <li class="footer__item">
-                            <a class="link footer__link" href="#">
-                                Мапа сайту
-                            </a>
-                        </li>
-                    </ul>
-
-                    <address class="address">
-                        <ul class="address__list">
-                            <li class="address__item">
-                                <a class="icon-mask address__icon" href="#"
-                                    style="-webkit-mask-image: url('images/icons/sprite.svg#icon-location');"></a>
-                                <a class="link address__link" href="#">
-                                    вул. Т.Г.Шевченка, 1
-                                </a>
-                            </li>
-                            <li class="address__item">
-                                <a class="icon-mask address__icon" href="#"
-                                    style="-webkit-mask-image: url('images/icons/sprite.svg#icon-call');"></a>
-                                <a class="link address__link" href="tel:+380501112233">
-                                    380501112233
-                                </a>
-                            </li>
-                            <li class="address__item">
-                                <a class="icon-mask address__icon" href="#"
-                                    style="-webkit-mask-image: url('images/icons/sprite.svg#icon-message');"></a>
-                                <a class="link address__link" href="mailto:support@sfood.com">
-                                    support@sfood.com
-                                </a>
-                            </li>
-                        </ul>
-
-                        <ul class="social">
-
-                            <li class="social__item">
-                                <a class="icon-mask social__icon" href="#"
-                                    style="-webkit-mask-image: url('images/icons/sprite.svg#icon-facebook');"></a>
-                                <span class="sr-only">
-                                    Відкрити сторінку Facebook
-                                </span>
-                            </li>
-
-                            <li class="social__item">
-                                <a class="icon-mask social__icon" href="#"
-                                    style="-webkit-mask-image: url('images/icons/sprite.svg#icon-twitter');"></a>
-                                <span class="sr-only">
-                                    Відкрити сторінку Twitter
-                                </span>
-                            </li>
-
-                            <li class="social__item">
-                                <a class="icon-mask social__icon" href="#"
-                                    style="-webkit-mask-image: url('images/icons/sprite.svg#icon-instagram');"></a>
-                                <span class="sr-only">
-                                    Відкрити сторінку Instagram
-                                </span>
-                            </li>
-
-                        </ul>
-                    </address>
-
-                </div>
+                </form>
 
             </div>
 
-            <a class="footer__text" href="#">
-                &copy; 2023 Simple Food
-            </a>
-        </footer>
+            <ul class="footer__list">
+                <li class="footer__item">
+                    <a class="link footer__link" href="#">
+                        Як це працює
+                    </a>
+                </li>
+                <li class="footer__item">
+                    <a class="link footer__link" href="#">
+                        Про нас
+                    </a>
+                </li>
+                <li class="footer__item">
+                    <a class="link footer__link" href="#">
+                        Застосунок
+                    </a>
+                </li>
+                <li class="footer__item">
+                    <a class="link footer__link" href="#">
+                        Продукти
+                    </a>
+                </li>
+                <li class="footer__item">
+                    <a class="link footer__link" href="#">
+                        Новини
+                    </a>
+                </li>
+                <li class="footer__item">
+                    <a class="link footer__link" href="#">
+                        Блог
+                    </a>
+                </li>
+                <li class="footer__item">
+                    <a class="link footer__link" href="#">
+                        Страви
+                    </a>
+                </li>
+                <li class="footer__item">
+                    <a class="link footer__link" href="#">
+                        Партнери
+                    </a>
+                </li>
+                <li class="footer__item">
+                    <a class="link footer__link" href="#">
+                        Що нового?
+                    </a>
+                </li>
+                <li class="footer__item">
+                    <a class="link footer__link" href="#">
+                        Меню
+                    </a>
+                </li>
+                <li class="footer__item">
+                    <a class="link footer__link" href="#">
+                        ЧаПи
+                    </a>
+                </li>
+                <li class="footer__item">
+                    <a class="link footer__link" href="#">
+                        Мапа сайту
+                    </a>
+                </li>
+            </ul>
+
+            <address class="address">
+                <ul class="address__list">
+
+                    <li class="address__item">
+                        <a class="link address__link" href="#">
+                            <span class="icon-mask address__icon" href="#"
+                                style="-webkit-mask-image: url('images/icons/sprite.svg#icon-location');"></span>
+                            <span class="address__contact" href="#">
+                                вул. Т.Г.Шевченка, 1
+                            </span>
+                        </a>
+                    </li>
+
+                    <li class="address__item">
+                        <a class="link address__link" href="#">
+                            <span class="icon-mask address__icon" href="#"
+                                style="-webkit-mask-image: url('images/icons/sprite.svg#icon-call');"></span>
+                            <span class="address__contact" href="tel:+380501112233">
+                                380501112233
+                            </span>
+                        </a>
+                    </li>
+
+                    <li class="address__item">
+                        <a class="link address__link" href="#">
+                            <span class="icon-mask address__icon" href="#"
+                                style="-webkit-mask-image: url('images/icons/sprite.svg#icon-message');"></span>
+                            <span class="address__contact" href="mailto:support@sfood.com">
+                                support@sfood.com
+                            </span>
+                        </a>
+                    </li>
+
+                </ul>
+
+                <ul class="social">
+
+                    <li class="social__item">
+                        <a class="social__link" href="#">
+                            <span class="icon-mask social__icon" href="#"
+                                style="-webkit-mask-image: url('images/icons/sprite.svg#icon-facebook');"></span>
+                        </a>
+                        <span class="sr-only">
+                            Відкрити сторінку Facebook
+                        </span>
+                    </li>
+
+                    <li class="social__item">
+                        <a class="social__link" href="#">
+                            <span class="icon-mask social__icon" href="#"
+                                style="-webkit-mask-image: url('images/icons/sprite.svg#icon-twitter');"></span>
+                        </a>
+                        <span class="sr-only">
+                            Відкрити сторінку Twitter
+                        </span>
+                    </li>
+
+                    <li class="social__item">
+                        <a class="social__link" href="#">
+                            <span class="icon-mask social__icon" href="#"
+                                style="-webkit-mask-image: url('images/icons/sprite.svg#icon-instagram');"></span>
+                        </a>
+                        <span class="sr-only">
+                            Відкрити сторінку Instagram
+                        </span>
+                    </li>
+
+                </ul>
+            </address>
+
+        </div>
+
+    </div>
+
+    <a class="footer__text" href="#header">
+        &copy; 2023 Simple Food
+    </a>
+</footer>
