--- a/src/module/header/_header.html
+++ b/src/module/header/_header.html
@@ -1,47 +1,47 @@
-        <header class="header">
-            <div class="container">
+<header class="header" id="header">
+    <div class="container">
 
-                <nav class="menu">
+        <nav class="menu">
 
-                    <a class="logo" href="#">
-                        <img class="logo__img" src="./images/logo.svg" alt="Логотип компанії" width="200" height="39">
-                    </a>
+            <a class="logo" href="#header">
+                <img class="logo__img" src="./images/logo.svg" alt="Логотип компанії" width="200" height="39">
+            </a>
 
-                    <ul class="menu__list">
-                        <li class="menu__item">
-                            <a class="menu__link menu__link--active" href="#">Головна</a>
-                        </li>
+            <ul class="menu__list">
+                <li class="menu__item">
+                    <a class="menu__link menu__link--active" href="#header">Головна</a>
+                </li>
 
-                        <li class="menu__item">
-                            <a class="menu__link" href="#">Страви</a>
-                        </li>
+                <li class="menu__item">
+                    <a class="menu__link" href="#categories">Страви</a>
+                </li>
 
-                        <li class="menu__item">
-                            <a class="menu__link" href="#">Контакти</a>
-                        </li>
-                    </ul>
+                <li class="menu__item">
+                    <a class="menu__link" href="#footer">Контакти</a>
+                </li>
+            </ul>
 
-                    <ul class="user-nav">
-                        <li class="user-nav__item">
-                            <button class="user-nav--btn" type="button">
-                                <span class="sr-only">
-                                    Почати пошук
-                                </span>
-                                <span class="icon-mask user-nav--icon user-nav--icon-search"></span>
-                            </button>
-                        </li>
+            <ul class="user-nav">
+                <li class="user-nav__item">
+                    <button class="user-nav__btn" type="button">
+                        <span class="sr-only">
+                            Почати пошук
+                        </span>
+                        <span class="icon-mask user-nav__icon user-nav__icon--search"></span>
+                    </button>
+                </li>
 
-                        <li class="user-nav__item">
-                            <button class="user-nav--btn" type="button">
-                                <span class="sr-only">
-                                    Відкрити корзину
-                                </span>
-                                <span class="icon-mask user-nav--icon user-nav--icon-cart"></span>
-                                <span class="user-nav__number">4</span>
-                            </button>
-                        </li>
-                    </ul>
+                <li class="user-nav__item">
+                    <button class="user-nav__btn" type="button">
+                        <span class="sr-only">
+                            Відкрити корзину
+                        </span>
+                        <span class="icon-mask user-nav__icon user-nav__icon--cart"></span>
+                        <span class="user-nav__number">4</span>
+                    </button>
+                </li>
+            </ul>
 
-                </nav>
-            </div>
-        </header>
+        </nav>
+    </div>
+</header>
