--- a/src/module/hero/_hero.html
+++ b/src/module/hero/_hero.html
@@ -1,29 +1,29 @@
-            <section class="hero section">
-                <div class="container">
+<section class="hero section" id="hero">
+    <div class="container">
 
-                    <div class="hero__inner"
-                        style="background-image: image-set(url('../images/hero/guy@1x.webp') type('image/webp') 1x, url('../images/hero/guy@2x.webp') type('image/webp') 2x);">
+        <div class="hero__inner"
+            style="background-image: image-set(url('../images/hero/guy@1x.webp') type('image/webp') 1x, url('../images/hero/guy@2x.webp') type('image/webp') 2x);">
 
-                        <div class="hero__content">
+            <div class="hero__content">
 
-                            <h2 class="hero__title">
-                                Доставка
-                                <span class="hero__title--color">за 15 ХВИЛИН</span>
-                            </h2>
+                <h2 class="hero__title">
+                    Доставка
+                    <span class="hero__title__color">за 15 ХВИЛИН</span>
+                </h2>
 
-                            <p class="hero__text">
-                                Найшвидший сервіс доставки їжі у вашому місті. Якщо запізнемось - то доставка за наш
-                                рахунок
-                            </p>
+                <p class="hero__text">
+                    Найшвидший сервіс доставки їжі у вашому місті. Якщо запізнемось - то доставка за наш
+                    рахунок
+                </p>
 
-                            <button class="btn hero__btn" type="button">
-                                Замовити
-                            </button>
+                <button class="btn hero__btn" type="button">
+                    Замовити
+                </button>
 
-                            <a class="link link--underline hero__link" href="#">Детальніше</a>
+                <a class="link link--underline hero__link" href="#">Детальніше</a>
 
-                        </div>
+            </div>
 
-                    </div>
-                </div>
-            </section>
+        </div>
+    </div>
+</section>
