--- a/src/module/review/_review.html
+++ b/src/module/review/_review.html
@@ -1,28 +1,47 @@
-<section class="review section">
+<section class="review section" id="review">
     <div class="container">
         <h2 class="title review__title">
             Відгуки клієнтів
         </h2>
         <div class="review__inner">
-            <img class="review__img" src="../../images/review/daryna@1x.webp" alt="Щаслива дівчина з гамбургером"
-                srcset="../../images/review/daryna@2x.webp 2000w" width="300px" height="300px">
-            <blockquote class="review__blockquote">
+            <div class="review__content">
+                <img class="review__img" src="../../images/review/daryna@1x.webp" alt="Щаслива дівчина з гамбургером"
+                    srcset="../../images/review/daryna@2x.webp 2000w" width="300px" height="300px">
+                <blockquote class="review__blockquote">
 
-                <p class="review__paragraph">
-                    SimpleFood - одна з найкращих служб доставки продуктів з ресторанів у місті. Дуже зручний сайт та
-                    застосунок. Їхні доставники дуже ввічливі та пунктуальні. Компанія часто проводить акції та дарує
-                    знижки на доставку - однозначно рекомендую!
-                </p>
+                    <p class="review__paragraph">
+                        SimpleFood - одна з найкращих служб доставки продуктів з ресторанів у місті. Дуже зручний сайт
+                        та
+                        застосунок. Їхні доставники дуже ввічливі та пунктуальні. Компанія часто проводить акції та
+                        дарує
+                        знижки на доставку - однозначно рекомендую!
+                    </p>
 
-                <footer>
-                    <cite class="review__author">
-                        Дарина
-                    </cite>
-                    <span class="review__caption">
-                        Поціновувачка смачної їжі
-                    </span>
-                </footer>
-            </blockquote>
+                    <footer>
+                        <cite class="review__author">
+                            Дарина
+                        </cite>
+                        <span class="review__caption">
+                            Поціновувачка смачної їжі
+                        </span>
+                    </footer>
+                </blockquote>
+            </div>
+
+            <div class="review-slider">
+                <span class="review-slider__navigation review-slider__navigation--left">
+                    <span class="sr-only">Перейти до попереднього відгуку клієнта</span>
+                </span>
+                <ul class="review-slider__dots">
+                    <li class="review-slider__item"></li>
+                    <li class="review-slider__item"></li>
+                    <li class="review-slider__item"></li>
+                    <li class="review-slider__item"></li>
+                </ul>
+                <span class="review-slider__navigation review-slider__navigation--right">
+                    <span class="sr-only">Перейти до наступного відгуку клієнта</span>
+                </span>
+            </div>
         </div>
     </div>
 </section>
