--- a/src/module/features/_features.html
+++ b/src/module/features/_features.html
@@ -1,48 +1,46 @@
-            <section class="features section">
-                <div class="container">
-                    <div class="features__inner">
+<section class="features section" id="features">
+    <div class="container">
+        <div class="features__inner"
+            style="background-image: image-set(url('../../images/features/food_delivery@1x.webp') type('image/webp') 1x, url('../../images/features/food_delivery@2x.webp') type('image/webp') 2x);">
 
-                        <img class="features__img" src="../../images/features/food_delivery@1x.webp" alt="курье віддає їжу з єкрану телефону"
-                        srcset="../../images/features/food_delivery@2x.webp 2000w" width="440" height="585">
+            <div class="features__content">
 
-                        <div class="features__content">
+                <h2 class="title features__title">
+                    Залишайтеся вдома, а ми потурбуємося про їжу
+                </h2>
 
-                            <h2 class="title features__title">
-                                Залишайтеся вдома, а ми потурбуємося про їжу
-                            </h2>
+                <div class="features__text">
+                    <p>
+                        У нас є смачна їжа і ми готові доставити її до вас додому! Скористайтеся нашою
+                        доставкою прямо
+                        зараз та отримайте знижку!
+                    </p>
+                </div>
 
-                            <div class="features__text">
-                                <p>
-                                    У нас є смачна їжа і ми готові доставити її до вас додому! Скористайтеся нашою
-                                    доставкою прямо
-                                    зараз та отримайте знижку!
-                                </p>
-                            </div>
+                <ul class="features__list">
+                    <li class="features__item">
+                        <span class="icon-mask features__icon features__icon--timer"></span>
+                        <span class="features__des"></span>
+                        Швидка доставка за 15 хвилин
+                    </li>
 
-                            <ul class="features__list">
-                                <li class="features__item">
-                                    <span class="icon-mask icon-masc--features icon-mask--icon-timer"></span>
-                                    <span class="features__des"></span>
-                                    Швидка доставка за 15 хвилин
-                                </li>
+                    <li class="features__item">
+                        <span class="icon-mask features__icon features__icon--delivery"></span>
+                        <span class="features__des"></span>
+                        Чемні кур’єри
+                    </li>
 
-                                <li class="features__item">
-                                    <span class="icon-mask icon-masc--features icon-mask--icon-delivery"></span>
-                                    <span class="features__des"></span>
-                                    Чемні кур’єри
-                                </li>
+                    <li class="features__item">
+                        <span class="icon-mask features__icon features__icon--restorant"></span>
+                        <span class="features__desc"></span>
+                        Більше 500 закладів
+                    </li>
+                </ul>
 
-                                <li class="features__item">
-                                    <span class="icon-mask icon-masc--features icon-mask--icon-restorant"></span>
-                                    <span class="features__desc"></span>
-                                    Більше 500 закладів
-                                </li>
-                            </ul>
+                <button class="btn features__btn">
+                    Детальніше
+                </button>
 
-                            <button class="btn features__btn">
-                                Детальніше
-                            </button>
-
-                        </div>
-                    </div>
-            </section>
+            </div>
+        </div>
+</section>
